samples/_failures_safe/1761338522_c3eda9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3436f34e.c: In function ‘main’:
./samples/SAFE/__tmp_3436f34e.c:139:25: error: missing terminating " character
  139 |         fprintf(stderr, "Failed to
      |                         ^~~~~~~~~~
./samples/SAFE/__tmp_3436f34e.c:139:9: error: expected expression at end of input
  139 |         fprintf(stderr, "Failed to
      |         ^~~~~~~
./samples/SAFE/__tmp_3436f34e.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3436f34e.c:139:9: error: expected declaration or statement at end of input
